Fix 2 issues with start page
1) crack on blackboard removed + decreased image-size
2) improved alignment of button, heading and quote
+ also added some more top margin to info-section to not be hidden by
nav-bar

--- a/assets/css/bs_additions.css
+++ b/assets/css/bs_additions.css
@@ -16,3 +16,12 @@
   }
 }
 
+#heading_and_btn {
+  margin-top: 20vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex: 1;
+  padding-bottom: 1rem;
+}
+
