--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,8 +28,8 @@
 #landing-flex-box {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  height: 100%;
+  justify-content: space-between;
+  min-height: 100vh;
   width: 100%;
   max-width: none;
   color: white;
@@ -44,7 +44,7 @@
 
 #sec-home {
   color: rgba(0,0,0,0.6);
-  height: 100vh;
+  min-height: 100vh;
   background: url(../../assets/img/backgrounds/formula_bg.png) no-repeat;
   background-size: cover;
 }
@@ -189,7 +189,7 @@ html, body {
 @media (min-width: 576px) {
   .info-paragraph {
     font-size: 1.1rem;
-    padding-top: 20vh;
+    padding-top: 80px;
   }
 }
 
